Updating format of master part of puppet.conf.

--- a/templates/master.erb
+++ b/templates/master.erb
@@ -4,14 +4,13 @@
     # Passenger settings
     always_cache_features = true
     ssl_client_header = SSL_CLIENT_S_DN
-    ssl_client_verify_header = SSL_CLIENT_VERIFY<% end %>
-<% if @environmentpath %>
-    environmentpath = <%= @environmentpath %><% end %>
-<% if @certname %>
-    certname = <%= @certname %><% end %>
-<% if @dns_alt_names %>
-    dns_alt_names = <%= @dns_alt_names %><% end %>
+    ssl_client_verify_header = SSL_CLIENT_VERIFY
+<% end %>
+<% if @environmentpath %>    environmentpath = <%= @environmentpath %><% end %>
+<% if @certname %>    certname = <%= @certname %><% end %>
+<% if @dns_alt_names %>    dns_alt_names = <%= @dns_alt_names %><% end %>
 <% if @external_nodes %>
     # External Node Classifier settings
     node_terminus = exec
-    external_nodes = <%= @external_nodes %><% end %>
+    external_nodes = <%= @external_nodes %>
+<% end %>
