Enable $trusted hash

--- a/templates/main.erb
+++ b/templates/main.erb
@@ -15,3 +15,5 @@
     # The default value is '$confdir/ssl'.
     ssldir = <%= @ssldir %>
 
+    # Enable $trusted hash
+    trusted_node_data = true
